Fixed alignment issue with dropdown menu. Added hover effect to dropdown menu.

--- a/src/app/my/my.component.scss
+++ b/src/app/my/my.component.scss
@@ -43,7 +43,7 @@
     padding-top: 48px;
 
     @media screen and (max-width: 1024px) {
-        padding: 32px 16px 0;
+        padding: 32px 0;
     }
 
     ul {
@@ -59,6 +59,7 @@
         }
     }
     select {
+        box-sizing: border-box;
         display: none;
         width: 90%;
         height: 44px;
@@ -73,16 +74,25 @@
         background-color: #fff;
         font-size: 16px;
         font-weight: 400;
+        outline: none;
+        transition: color 250ms, border-color 250ms;
+    }
+
+    select:hover {
+        color: #1C1E20;
+        border-color: #1C1E20;
+        transition: none;
+
     }
 }
 
 
 /* media query ==================*/
 
-@media (max-width: 900px){
+@media (max-width: 1024px){
     #my-menu {
         width: 100%;
-        float: left;
+        // float: left;
         // padding-bottom: 35px;
 
         ul {
